# accel-MagicRoulette

./: .env.example  .gitignore  Anchor.toml  FRONTEND_CODE_STRUCTURE_GUIDE.md  README.md  SolanaPrograms.toml  magic-roulette-wallet.json  package.json  tsconfig.json
.github/workflows/: build-and-test.yaml
.husky/: pre-push
app/: .env.example  .lintstagedrc.js  README.md  eslint.config.mjs  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: BetHistory.tsx  BigRoundedButton.tsx  EmptyWallet.tsx  Header.tsx  InfoDiv.tsx  InfoText.tsx  PlaceBetSection.tsx  Providers.tsx  RouletteTable.tsx  RoundInfo.tsx  SettingsDropdown.tsx  TableInfo.tsx  TransactionToast.tsx
app/src/hooks/: useSelectedBet.tsx  useTime.ts  useTransaction.tsx
app/src/idl/: magic-roulette.json
app/src/lib/: api.ts  betType.ts  constants.ts  magic-roulette-client.ts  program-client.ts  utils.ts
programs/magic-roulette/: Cargo.toml
programs/magic-roulette/src/: constants.rs  error.rs  events.rs  lib.rs
programs/magic-roulette/src/instructions/: advance_round.rs  claim_winnings.rs  initialize_table.rs  mod.rs  place_bet.rs  spin_roulette.rs  update_table.rs  withdraw_vault.rs
programs/magic-roulette/src/state/: bet.rs  mod.rs  round.rs  table.rs
programs/magic-roulette/src/utils/: system.rs
scripts/: setup.ts
scripts/instructions/: initializeTable.ts  spinRoulette.ts  updateTable.ts  withdrawVault.ts
tests/: accounts.ts  bet-type.ts  client.ts  constants.ts  magic-roulette.test.ts  magic-roulette.ts  pda.ts  setup.ts  utils.ts
(+22 files in other folders)
