[package]
name = "magic-roulette"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_roulette"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
ephemeral-vrf-sdk = { version = "0.2.0", features = ["anchor"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = "0.27.2"
strum_macros = "0.27.2"
